Upcoming
- Worldgen enhancements: random biome dependend features on the terrain. Currently spheres and spikes
- New city biome
- Fixed a problem with underground station not being generated when there was a floating city above it
- Added support for mob spawners to cities and added solider spawning to some of the Ariente biomes
- Added background music from Icelingbolt, nakisee, and TheGur90
- Disabled rain and thunder in the Ariente dimension
- Disabled clouds in the Ariente dimension
- Dungeon cities now have names and these names are also used on the keycards that belong to those cities. That makes it easier to identify what keycards are important for a given city
- Made the city AI more robust so it will not spawn drones, sentinels and soldiers out of control
- Fixed a problem with the Ariente pearl not always working correctly

0.0.22-alpha:
- Fixed another problem with generated flux levitators crashing

0.0.21-alpha:
- Fixed a problem with the city ai crashing

0.0.20-alpha:
- The 'dimension' part of Ariente is now a separate mod