@@ -9,6 +9,7 @@ Upcoming
 - Dungeon cities now have names and these names are also used on the keycards that belong to those cities. That makes it easier to identify what keycards are important for a given city
 - Made the city AI more robust so it will not spawn drones, sentinels and soldiers out of control
 - Fixed a problem with the Ariente pearl not always working correctly
+- Overworld dungeons should only appear in the overworld!
 
 0.0.22-alpha:
 - Fixed another problem with generated flux levitators crashing
